# dining_cryptocoryne

./: .env  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  run_securocracy.sh
client/: setup.cfg  setup.py
client/src/client/: __init__.py  __main__.py  crypto.py  websocket_interface.py
common/: setup.cfg  setup.py
common/src/common/: __init__.py  crypto.py  messages_types.py
resources/ca/: ca.key  ca_cert.pem  ca_cert.srl
resources/certs/: client_securocracy_cert.pem  client_securocracy_cert_req.pem  client_securocracy_key.pem  securocracy_cert.pem  securocracy_key.pem  server_securocracy_cert.pem  server_securocracy_cert_req.pem  server_securocracy_key.pem
server/: setup.cfg  setup.py
server/src/server/: __init__.py  __main__.py  client_session.py  connection_listener.py  crypto.py  session_downstream_handler.py  session_event.py  session_manager_server.py  session_upstream_handler.py
