[metadata]
name = client
description = Securocracy client app
license = MIT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    client
install_requires =
    wheel
    websockets>=10.2
    pycryptodomex>=3.14
package_dir = =src
python_requires = >=3.8
